syntax = "proto3";

package order;

service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse) {}
  rpc FindOne (FindOneRequest) returns (FindOneResponse) {}
  rpc GetAll (Empty) returns (FindManyResponse) {}
}

message Empty {}


// Find
message FindOneData {
  int32 id = 1;
  string product = 2;
  int32 quantity = 3;
  int32 userId = 4;
}

message FindOneRequest {
  int32 id = 1;
}

message FindOneResponse {
  int32 status = 1;
  repeated string error = 2;
  FindOneData data = 3;
}

message FindManyResponse {
  int32 status = 1;
  repeated string error = 2;
  repeated FindOneData data = 3;
}

// Create
message CreateOrderRequest {
  int32 productId = 1;
  int32 quantity = 2;
  int32 userId = 3;
}

message CreateOrderResponse {
  int32 status = 1;
  repeated string error = 2;
  int32 id = 3;
}
